Toevoegen inlog alert

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -651,3 +651,28 @@ img {
     height: 100%;
   }
 }
+
+.alert {
+  padding: 12px 16px;
+  color: #333;
+  margin-bottom: 15px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+}
+
+/* The close button */
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* When moving the mouse over the close button */
+.closebtn:hover {
+  color: black;
+}
