--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -15,6 +15,8 @@ Google maps ernaast.
   height: 30vh;
   &__right {
     iframe {
+      border-top-right-radius: 6px;
+      border-bottom-right-radius: 6px;
       height: 100%;
       width: 100%;
       border: none;
@@ -22,6 +24,8 @@ Google maps ernaast.
   }
   &__left {
     #swd-slideshow {
+      border-top-left-radius: 6px;
+      border-bottom-left-radius: 6px;
       width: 100%;
       height: 100%;
       position: relative;
@@ -72,27 +76,50 @@ Google maps ernaast.
 .services {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  color: #fff;
+  color: #eee;
   font-weight: bold;
   @include tablet {
     grid-template-columns: 1fr;
     height: 100%;
   }
+  a {
+    color: #eee;
+    text-decoration: none;
+    font-weight: bold;
+    &:first-child {
+      margin-right: 1rem;
+    }
+    &:last-child {
+      margin-left: 1rem;
+    }
+  }
   &__container {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("/assets/img/pharmasict-serving-customer-drug-store.jpg");
-    background-repeat: none;
-    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 1rem;
     height: 200px;
     width: auto;
-    background-color: var(--lighter-gray);
-    border-radius: var(--boder-radius);
+    border-radius: 6px;
     &:hover {
       cursor: pointer;
+    }
+    &--service {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url("../img/1.jpg");
+      background-repeat: none;
+      background-size: cover;
+    }
+    &--overzicht {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url("../img/2.jpg");
+      background-repeat: none;
+      background-size: cover;
+    }
+    &--inschrijven {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url("../img/3.jpg");
+      background-repeat: none;
+      background-size: cover;
     }
   }
 }
